k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: secure-app-service

spec:
  selector:
    app: secure-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: LoadBalancer
