k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: secure-app-network-policy
  namespace: secure-devsecops

spec:
  podSelector:
    matchLabels:
      app: secure-app

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - {}

  egress:
    - {}
